# Ex1

./: CMakeLists.txt
.github/workflows/: linux.yml  release.yml
src/: CMakeLists.txt  main.cpp
